# TypePigeon

./: .readthedocs.yml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.builds/: build.yml  mirror.yml  test.yml
.github/workflows/: build.yml  formatting.yml  quick_test.yml  tests.yml  tests_simple.yml
docs/source/: conf.py  convert_to_json.rst  convert_value.rst  guard_generic_alias.rst  index.rst  subscripted_type.rst  to_json.rst  to_type.rst
tests/: __init__.py  conftest.py  test_convert.py  test_convert_to_json.py  test_convert_value.py  test_convert_value_class.py  test_convert_value_geometry.py  test_guard_generic_alias.py  test_subscripted_type.py  test_to_json.py  test_to_type.py  test_to_type_class.py  test_to_type_geometry.py  test_utilities.py
tests/data/reference/test_convert_crs/: epsg4326.json  epsg4326.txt  epsg4326_python36.txt  epsg4326_windows.json
tests/data/reference/test_convert_value/: epsg4326.json
typepigeon/: __init__.py  convert.py  to_json.py  to_type.py  types.py
