[project]
name = 'typepigeon'
description = 'Python type converter'
authors = [{ name = 'Zach Burnett', email = 'zachary.r.burnett@gmail.com' }]
readme = 'README.md'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
dependencies = ['python-dateutil']
dynamic = ['version']

[project.optional-dependencies]
spatial = ['pyproj', 'shapely']
test = ['pytest', 'pytest-cov', 'pytest-xdist']
docs = ['dunamai', 'm2r2', 'sphinx', 'sphinx-rtd-theme', 'tomli; python_version <"3.11"', ]

[project.urls]
repository = 'https://github.com/zacharyburnett/TypePigeon.git'
documentation = 'https://typepigeon.readthedocs.io'

[build-system]
requires = [
    'setuptools >=61',
    'setuptools_scm[toml] >=3.4',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.pytest.ini_options]
markers = ['spatial']
norecursedirs = [
    'build',
    '.eggs',
    'venv',
    '.tox',
]

[tool.ruff]
line-length = 127
select = ["ALL"]
extend-ignore = [
    # Ignored check groups
    "C90", # mccabe complexity
    "D", # pydocstyle
    "ANN", # flake8-annotations
    "FBT", # flake8-boolean-trap
    "EM", # flake8-errmsg
    "ARG", # flake8-unused-arguments
    "DTZ", # flake8-datetimez
    'UP006', # Use `list` instead of `List` for type annotations
    # Individually ignored checks
    "B905", # Requires python 3.10 (use zip strict)
    'E501', # Line too long
    'E722', # Do not use bare `except`
    "PT011", # `pytest.raises(...)` is too broad, set the `match` parameter or use a more specific exception
    "Q000", # Single quotes found but double quotes preferred
    "S101", # Use of `assert` detected
    "UP007", # Use `X | Y` for type annotations
]