[metadata]
name = typepigeon
author = Zach Burnett <zachary.r.burnett@gmail.com>
description = Python type converter
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
url = https://typepigeon.readthedocs.io

[options]
install_requires =
    pyproj
    python>=3.6
    python-dateutil
    shapely

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    m2r2
    sphinx
    sphinx-rtd-theme