[metadata]
name = typepigeon
author = Zach Burnett <zachary.r.burnett@gmail.com>
description = Python type converter
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.6
url = https://typepigeon.readthedocs.io

[options]
install_requires =
    pyproj
    python-dateutil
    shapely

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    dunamai
    m2r2
    sphinx
    sphinx-rtd-theme