[metadata]
name = typepigeon
author = Zach Burnett <zachary.r.burnett@gmail.com>
description = Python type converter
long_description = file:README.md
long_description_content_type = text/markdown
license = GPLv3
python_requires = >=3.6
url = https://typepigeon.readthedocs.io

[options]
install_requires =
    python-dateutil
    importlib_metadata

[options.extras_require]
spatial =
    pyproj
    shapely
testing =
    pytest
    pytest-cov
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    dunamai
    m2r2
    sphinx
    sphinx-rtd-theme